# fundamentalsOOP

./: README.md
1_semester/1_lab/: Info_first_lab.txt  first_lab.cpp  graph_test.txt  graphs.h  main.cpp  matrix_graph_test  matrix_graph_test.txt  testing.cpp
1_semester/1_lab/classes/: Classes.h  Graph.h  IncendenceMatrixGraph.h  MatrixGraph.h  Probability.h  graphs.h
1_semester/1_lab/textfiles/: graph_test.txt  incendence_matrix_graph_test.txt  matrix_graph_test.txt
1_semester/2_lab/: CMakeLists.txt  countdown.cpp  countdown.h  digitalclock.cpp  digitalclock.h  imagewindow.cpp  imagewindow.h  imagewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  timer.cpp  timer.h  timerinfo.h  timerinfowindow.cpp  timerinfowindow.h  timerinfowindow.ui  timerlistwindow.cpp  timerlistwindow.h  timerlistwindow.ui  timerwidget.cpp  timerwidget.h  timerwidget.ui
2_semester/1_lab/: OOP_Principles.txt  glossary.txt
2_semester/1_lab/project/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
2_semester/1_lab/project/docs/: hierarchy.html  index.html  modules.html
2_semester/1_lab/project/docs/assets/: hierarchy.js  navigation.js  search.js
2_semester/1_lab/project/docs/classes/: base-model_BaseModel.BaseModel.html  drivers_DriverFactory.DriverFactory.html  drivers_mysql_MySqlDriver.MySqlDriver.html  drivers_mysql_dialect_MySqlDialect.MySqlDialect.html  drivers_postgres_PostgresDriver.PostgresDriver.html  drivers_postgres_dialect_PostgresDialect.PostgresDialect.html  drivers_postgres_dialect_compilers_PostgresDeleteCompiler.PostgresDeleteCompiler.html  drivers_postgres_dialect_compilers_PostgresInsertCompiler.PostgresInsertCompiler.html  drivers_postgres_dialect_compilers_PostgresSelectCompiler.PostgresSelectCompiler.html  drivers_postgres_dialect_compilers_PostgresUpdateCompiler.PostgresUpdateCompiler.html  drivers_postgres_dialect_compilers_common_PostgresConditonCompiler.PostgresConditionCompiler.html  drivers_postgres_dialect_compilers_common_PostgresQueryCompiler.PostgresQueryCompiler.html  drivers_postgres_dialect_utils_PostgresDialectUtils.PostgresDialectUtils.html  drivers_postgres_dialect_utils_PostgresParameterManager.PostgresParameterManager.html  drivers_sqlite_SqliteDriver.SqliteDriver.html  (+13 more)
2_semester/1_lab/project/src/: index.ts
2_semester/3_lab/: results_comparison.txt
2_semester/3_lab/headers/: Matrix.h  MatrixMultiplier.h  ParallelMultiplier.h  SequentialMultiplier.h
2_semester/3_lab/src/: Matrix.cpp  ParallelMultiplier.cpp  SequentialMultiplier.cpp  main.cpp  testing.cpp
(+187 files in other folders)
